# print-store-hardware-display

./: .gitignore  README  lv_conf.h  platformio.ini
include/: secrets.h.example
squareline_project/: SquareLine_Project.sll  SquareLine_Project.spj
squareline_project/assets/: ui_font_NotoCheckEmoji.fcfg  ui_font_Poppins14.c  ui_font_Poppins14.fcfg  ui_font_Poppins16.c  ui_font_Poppins16.fcfg  ui_font_Poppins18.c  ui_font_Poppins18.fcfg  ui_font_Poppins20.c  ui_font_Poppins20.fcfg  ui_font_Poppins22.c  ui_font_Poppins22.fcfg  ui_font_SourceCodeCheckEmoji.fcfg
src/: StatusBar.cpp  StatusBar.h  main.cpp  main.h  ui_init.cpp  ui_init.h  utils.cpp  utils.h
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Error.c  ui_Idle.c  ui_Result.c  ui_ResultColor.c  ui_ResultNotFound.c  ui_Scanning.c  ui_Screen1.c  ui_Screen2.c  ui_Startup.c  ui_Step1.c  ui_Step2.c  ui_Step3.c  ui_Step4.c  ui_Step5.c  ui_font_NotoCheckEmoji.c  ui_font_Poppins14.c  ui_font_Poppins18.c  ui_font_Poppins22.c  ui_font_SourceCodeCheckEmoji.c  ui_img_battery_empty_solid_png.c  ui_img_battery_full_solid_png.c  ui_img_battery_half_solid_png.c  ui_img_battery_quarter_solid_png.c  ui_img_battery_three_quarters_solid_png.c  ui_img_bg_arc_png.c  ui_img_camera_solid_png.c  ui_img_circle_solid_green_png.c  ui_img_circle_solid_large_png.c  ui_img_circle_solid_png.c  ui_img_circle_solid_red_png.c  ui_img_exclamation_triangle_solid_png.c  ui_img_home_solid_png.c  ui_img_hourglass_start_solid_png.c  ui_img_minus_solid_png.c  ui_img_palette_solid_png.c  ui_img_plus_solid_png.c  (+7 more)
